src/objects/Activity/fields/customer_demo_jun7__c.field-meta.xml
<CustomField>
    <fullName>customer_demo_jun7__c</fullName>
    <label>customer_demo_jun7</label>
    <length>25</length>
    <type>Text</type>
</CustomField>