src/objects/Activity/fields/customer_demo_may25__c.field-meta.xml
<CustomField>
    <fullName>customer_demo_may25__c</fullName>
    <label>customer_demo_may25</label>
    <length>25</length>
    <type>Text</type>
</CustomField>