src/objects/Activity/fields/derek_demo__c.field-meta.xml
<CustomField>
    <fullName>derek_demo__c</fullName>
    <label>derek_demo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>