src/objects/Activity/fields/presentation_demo_Jun28__c.field-meta.xml
<CustomField>
    <fullName>presentation_demo_Jun28__c</fullName>
    <label>presentation_demo_Jun28</label>
    <length>25</length>
    <type>Text</type>
</CustomField>