src/objects/Activity/fields/territory__c.field-meta.xml
<CustomField>
    <fullName>territory__c</fullName>
    <label>territory</label>
    <length>25</length>
    <type>Text</type>
</CustomField>